docker-k8s-container-management/my-app/k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: ahmed92clmb/todo-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
