docker-k8s-container-management/my-app/k8s/deployment-db.yaml
# k8s/deployment-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
