docker-k8s-container-management/my-app/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  selector:
    app: todo-frontend
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
